Revert "Remove baseurl"
This reverts commit dcbc2201f739e7e4164961c13cd42151b58e4ad8.

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ tagline: Vēstules
 description: "Describe your website."
 #Comment out url when working locally to resolve base urls correctly
 url: http://martinsmihailovs.com
+baseurl:
 
 exclude: [
   'node_modules',
