--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ url: http://martinsmihailovs.com
 baseurl: ""
 
 exclude: [
+  'css',
+  'js',
   'node_modules',
   'Gruntfile.js',
   'package.json',
