Update occupation info in bio page

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ exclude: [
 # Owner/author information
 owner:
   name: Mārtiņš Mihailovs
-  occupation: Designer
+  occupation: Dizainers / web izstrādātājs
   email: m.mihailovs@gmail.com
   twitter: Mar7ins
   github: MartinsMihailovs
