Oh, man, i'm getting old // Update my age on bio page

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ exclude: [
 owner:
   name: Mārtiņš Mihailovs
   occupation: Dizainers / web izstrādātājs
+  age: 27
   email: m.mihailovs@gmail.com
   twitter: Mar7ins
   github: MartinsMihailovs
