Update config file occupation

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ exclude: [
 # Owner/author information
 owner:
   name: Mārtiņš Mihailovs
-  occupation: Dizainers / web izstrādātājs
+  occupation: UX/UI dizainers / web izstrādātājs
   age: 29
   email: m.mihailovs@gmail.com
   twitter: Mar7ins
